--- a/app/templates/request.html
+++ b/app/templates/request.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Enter a Request</title>
 </head>
 <body>
 
