--- a/app/templates/request.html
+++ b/app/templates/request.html
@@ -5,6 +5,30 @@
     <title>Enter a Request</title>
 </head>
 <body>
-
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.leagueId.label }}<br>
+            {{ form.leagueId(size=32) }}<br>
+            {% for error in form.leagueId.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.teamName.label }}<br>
+            {{ form.teamName(size=32) }}<br>
+            {% for error in form.teamName.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.year.label }}<br>
+            {{ form.year(size=32) }}<br>
+            {% for error in form.year.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
 </body>
 </html>
