--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TEAM NAME HERE</title>
+    <title>{{ teamName }}</title>
 </head>
 <body>
-    {% with managers = /*TODO: insert query*/) %}
+    <a href="{{ url_for('request') }}">Home</a>
+    <h2>{{ year }}</h2>
+    {% if rank %}
+    <h4>{{ rank }}</h4>
+    {% endif %}
+    {% if record %}
+    <h4>{{ record }}</h4>
+    {% endif %}
     {% if managers %}
     <ul>
-        {% for manager in managers %}
-        <li>{{ manager }}</li>
+        {% for manager in {manNames} %}
+        <li><a href="{{ url_for('manager', data['personId']) }}">{{ data[' }}</a></li>
         {% endfor %}
     </ul>
     {% endif %}
-    {% endwith %}
 </body>
 </html>
