--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -16,7 +16,7 @@
     {% if managers %}
     <ul>
         {% for manager in managers %}
-        <li><a href="{{ url_for('manager', data['personId']) }}">{{manager.personId}}</a></li>
+        <li><a href="">{{manager.personId}}</a></li>
         {% endfor %}
     </ul>
     {% endif %}
