--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -2,21 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hi?</title>
+    <title>{{ name }}</title>
 </head>
 <body>
     <a href="{{ url_for('request') }}">Home</a>
+    {% if name %}
+    <h1>{{ name }}</h1>
+    {% else %}
+    <h1>NAME</h1>
+    {% endif %}
+    {% if year %}
     <h2>{{ year }}</h2>
+    {% else %}
+    <h2>YEAR</h2>
+    {% endif %}
     {% if rank %}
     <h4>{{ rank }}</h4>
+    {% else %}
+    <h4>RANK</h4>
     {% endif %}
     {% if record %}
     <h4>{{ record }}</h4>
+    {% else %}
+    <h4>RECORD</h4>
     {% endif %}
     {% if managers %}
     <ul>
         {% for manager in managers %}
-        <li><a href="">{{manager.personId}}</a></li>
+        <li><a href="/manager/{{ manager.personId }}">{{manager.firstName + ' ' + manager.lastName}}</a></li>
         {% endfor %}
     </ul>
     {% endif %}
