--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,32 +1,23 @@
 <!doctype html>
 <html>
     <head>
-        {% if title %}
-        <title>{{ title }} - Microblog</title>
-        {% else %}
-        <title>Welcome to Microblog</title>
-        {% endif %}
+        <title>Baseball</title>
     </head>
     <body>
         <div>
-            Microblog:
             <a href="{{ url_for('index') }}">Home</a>
+            <hr>
             {% if current_user.is_anonymous %}
-            <a href="{{ url_for('login') }}">Login</a>
+                <a href="{{ url_for('login') }}">Login</a>
+                <hr>
+                <a href="{{ url_for('register') }}">Register</a>
             {% else %}
-            <a href="{{ url_for('logout') }}">Logout</a>
+                <a href="{{ url_for('request') }}">Request</a>
+                <hr>
+                <a href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
         </div>
         <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
