--- a/app/templates/request.html
+++ b/app/templates/request.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Enter a Request</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -30,5 +26,4 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-</body>
-</html>
+{% endblock %}
