--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block content %}
     {% if current_user.is_anonymous %}
-        <h1 style="text-align: center">{{ current_user.username }}!</h1>
-        <h4>Number of Requests</h4>
-        <p>{{ count }}</p>
-    {% else %}
         <h1 style="text-align: center">Welcome</h1>
         <p>Please sign in or create a new account to access baseball data.</p>
+    {% else %}
+        <h1 style="text-align: center">{{ current_user.username }}</h1>
+        <h4>Number of Requests</h4>
+        <p>{{ current_user.count }}</p>
     {% endif %}
 {% endblock %}
