--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,27 +1,31 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/base.css') }}">
         <title>Baseball</title>
     </head>
     <body>
-        <div>
-            <a href="{{ url_for('index') }}">Home</a>
-            <hr>
-            {% if current_user.is_admin %}
-                <a href="{{ url_for('counts') }}">Counts</a>
+        <div id="all">
+            <div id="sidebar">
+                <a href="{{ url_for('index') }}">Home</a>
                 <hr>
-            {% endif %}
-            {% if current_user.is_anonymous %}
-                <a href="{{ url_for('login') }}">Login</a>
-                <hr>
-                <a href="{{ url_for('register') }}">Register</a>
-            {% else %}
-                <a href="{{ url_for('request') }}">Request</a>
-                <hr>
-                <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
+                {% if current_user.is_admin %}
+                    <a href="{{ url_for('counts') }}">Counts</a>
+                    <hr>
+                {% endif %}
+                {% if current_user.is_anonymous %}
+                    <a href="{{ url_for('login') }}">Login</a>
+                    <hr>
+                    <a href="{{ url_for('register') }}">Register</a>
+                {% else %}
+                    <a href="{{ url_for('request') }}">Request</a>
+                    <hr>
+                    <a href="{{ url_for('logout') }}">Logout</a>
+                {% endif %}
+            </div>
+            <div id="content">
+                {% block content %}{% endblock %}
+            </div>
         </div>
-        <hr>
-        {% block content %}{% endblock %}
     </body>
 </html>
