--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ name }}</h1>
+    <h1 style='text-align:center'>{{ name }}</h1>
     <table>
         <tr>
           <th>Team</th>
