--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/base.css') }}">
-        <title>Baseball</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='baseball.png') }}">
+        <title>!!! Baseball</title>
     </head>
     <body>
         <div id="all">
